# MRU

./: .gitignore  .hgignore  .todo  CMakeLists.txt  build.sh  build_gcc  build_gcc.sh  clean  prepare_to_build  todo.rst
cmake/Modules/: FindCppUnit.cmake  FindICU.cmake
doc/: TexmakerSession.tks  definicje.tex  implementacja.tex  latex-spojniki.sh  lista_publikacji.tex  main.dvi  main.lof  main.lot  main.ps  main.tex  main.toc  makepdf.sh  przeglad.tex  references.bib  rozdzial1.dvi  srodowisko.tex  streszczenie.tex  summary.tex  teoria.tex  title.tex  wnioski.tex  wprowadzenie.dvi  wprowadzenie.tex
src/: .clang_complete  BsdDllModule.cpp  BsdDllModule.hpp  CMakeLists.txt  DllModule.hpp  DynamicPluginManager.hpp  DynamicPluginManager_impl.hpp  FileIterator.cpp  FileIterator.hpp  FilteringFileIterator.cpp  FilteringFileIterator.hpp  Iterator.hpp  Metatag.cpp  Metatag.hpp  MetatagBase.cpp  MetatagBase.hpp  MetatagExpression.cpp  MetatagExpression.hpp  MetatagExpressionLexer.cpp  MetatagExpressionLexer.hpp  MetatagExpressionParser.cpp  MetatagExpressionParser.hpp  MetatagExpressionTokenizer.cpp  MetatagExpressionTokenizer.hpp  MetatagPluginConverter.hpp  MruCore.cpp  MruCore.hpp  MruDefaultConfiguration.cpp  MruException.hpp  PluginManager.hpp  PluginManager_impl.hpp  Session.vim  SortingFileIterator.cpp  SortingFileIterator.hpp  StateMachine.hpp  StateMachine_impl.hpp  StdIteratorAdapter.hpp  StdIteratorAdapter_impl.hpp  Tokenizer.cpp  Tokenizer.hpp  (+23 more)
src/Metatag/: CMakeLists.txt  Expression.cpp  Expression.hpp  Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp  Tokenizer.cpp  Tokenizer.hpp
src/MetatagExpression/: CMakeLists.txt  Expression.cpp  Expression.hpp  Lexer.cpp  Lexer.hpp  Metatag.cpp  Metatag.hpp  Parser.cpp  Parser.hpp  Tokenizer.cpp  Tokenizer.hpp
src/debug_l/: CMakeLists.txt  cmake_install.cmake  debug_l.cpp  debug_l.h  main.cpp
src/metatag/: CMakeLists.txt  Session.vim  expression.cpp  expression.hpp  metatag.cpp  metatag.hpp  sample_expression.txt
src/plugin_manager/: CMakeLists.txt  Session.vim  dynamic_module.cpp  dynamic_module.hpp  dynamic_module_bsd.cpp  dynamic_module_bsd.hpp  hello.cpp  plugin_manager.cpp  plugin_manager.hpp  plugin_manager_impl.hpp
src/plugin_manager/tests/: CMakeLists.txt  hello_host.cpp  hello_plugin.cpp  hello_plugin.hpp  load_test.cpp  test_module.hpp  test_module1.cpp  test_module2.cpp
src/plugins/: CMakeLists.txt  InputPlugin.hpp  MetatagPlugin.hpp  MruPlugin.cpp  MruPlugin.hpp  OutputPlugin.hpp  TagPlugin.hpp  UiPlugin.hpp  filesystem_plugin.hpp  output_plugin.hpp  tag_plugin.hpp  ui_plugin.hpp
src/plugins/filesystem/: CMakeLists.txt
src/plugins/filesystem/GenericBoostFSDriver/: CMakeLists.txt  GenericBoostFSDriver.cpp  GenericBoostFSDriver.hpp
src/plugins/input/: CMakeLists.txt
src/plugins/input/BoostInput/: BoostInput.cpp  BoostInput.hpp  CMakeLists.txt
src/plugins/input/BoostInputPlugin/: BoostInputPlugin.cpp  BoostInputPlugin.hpp  CMakeLists.txt  Session.vim
src/plugins/output/: CMakeLists.txt
src/plugins/output/BoostOutput/: BoostOutput.cpp  BoostOutput.hpp  CMakeLists.txt
src/plugins/output/GenericBoost/: CMakeLists.txt  GenericBoost.cpp  GenericBoost.hpp
src/plugins/tags/: CMakeLists.txt
src/plugins/tags/AudioMetatag/: AudioMetatag.cpp  AudioMetatag.hpp  CMakeLists.txt
src/plugins/tags/AudioTag/: AudioTag.cpp  AudioTag.hpp  CMakeLists.txt  Session.vim
src/plugins/tags/StandardMetatags/: CMakeLists.txt  CountMetatag.cpp  CountMetatag.hpp  DirMetatag.cpp  DirMetatag.hpp  ExtMetatag.cpp  ExtMetatag.hpp  FormatMetatag.cpp  FormatMetatag.hpp  NameMetatag.cpp  NameMetatag.hpp  SizeMetatag.cpp  SizeMetatag.hpp  StandardMetatags.cpp  TextCaseMetatag.cpp  TextCaseMetatag.hpp
src/plugins/tags/StandardTags/: CMakeLists.txt  CountTag.cpp  CountTag.hpp  DirTag.cpp  DirTag.hpp  ExtTag.cpp  ExtTag.hpp  NameTag.cpp  NameTag.hpp  StandardTags.cpp  StandardTags.hpp  TextCaseTag.cpp  TextCaseTag.hpp
src/plugins/ui/: CMakeLists.txt
src/plugins/ui/TextUi/: CMakeLists.txt  TextUi.cpp  TextUi.hpp
src/plugins/ui/wxWidgetsUi/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  PathValidator.cpp  PathValidator.hpp  Session.vim  TreeFrame.cpp  TreeFrame.hpp  glue_extension.hpp  wxWidgetsUi.cpp  wxWidgetsUi.hpp
src/tests/: BoostInputPlugin_test.cpp  BoostInputPlugin_test.hpp  BoostInput_test.cpp  BoostInput_tests.cpp  BoostOutput_test.cpp  BoostOutput_tests.cpp  CMakeLists.txt  ConstIterator_tests.hpp  ConstIterator_tests_impl.hpp  DllModule_tests.cpp  DllModule_tests.hpp  DynamicPluginManager_tests.cpp  DynamicPluginManager_tests.hpp  FilteringFileIterator_test.cpp  FilteringFileIterator_tests.cpp  FilteringFileIterator_tests.hpp  InputPlugin_test.cpp  InputPlugin_test.hpp  InputPlugin_tests.cpp  InputPlugin_tests.hpp  MetatagExpressionLexer_test.cpp  MetatagExpressionLexer_test.hpp  MetatagExpressionLexer_tests.cpp  MetatagExpressionLexer_tests.hpp  MetatagExpressionParser_tests.cpp  MetatagExpressionParser_tests.hpp  MetatagExpressionTokenizer_test.cpp  MetatagExpressionTokenizer_test.hpp  MetatagExpressionTokenizer_tests.cpp  MetatagExpressionTokenizer_tests.hpp  MetatagExpression_test.cpp  MetatagExpression_test.hpp  MetatagExpression_tests.cpp  MetatagExpression_tests.hpp  MockFileIterator.cpp  MockFileIterator.hpp  MockOutput.cpp  MockOutput.hpp  MockOutput_test.cpp  MockOutput_tests.cpp  (+47 more)
